과학 링크 추가

--- a/1-menu.html
+++ b/1-menu.html
@@ -11,8 +11,13 @@
     <div>
         <a href="index.html"><i class="fas fa-home fa-2x"></i></a>
     </div>
-
-    <h1 class="menu-year">1학년</h1>
+    
+    <div class="menu-year">
+        <a href="6-menu.html"><i class="fas fa-angle-left fa-2x"></i></a>
+        <h1>1학년</h1>
+        <a href="2-menu.html"><i class="fas fa-angle-right fa-2x"></i></a>
+    </div>
+    
 
     <div class="subject">
         <a href="1-menu.html"><div class="subject-select subject-select_국어 subject-select_국어1">국어</div></a>
@@ -84,6 +89,7 @@
                     <li class="class-order2_list"><a href="국어/1학년/6-받침이 있는 글자3.html">[5~6차시] 받침이 있는 글자 읽기</a></li>
                     <li class="class-order2_list"><a href="국어/1학년/6-받침이 있는 글자4.html">[7~8차시] 받침이 있는 글자 쓰기</a></li>
                     <li class="class-order2_list"><a href="국어/1학년/6-받침이 있는 글자5.html">[9~10차시] 받침이 있는 글자로 놀이하기</a></li>
+                    <li class="class-order2_list">&nbsp;</li>
                 </ul>
                 <h3>7. 생각을 나타내요</h3>
                 <ul class="class-order2_lists">
@@ -109,6 +115,7 @@
                     <li class="class-order2_list"><a href="국어/1학년/9-그림일기를 써요3.html">[5~6차시] 그림일기 쓰는 방법 알기</a></li>
                     <li class="class-order2_list"><a href="국어/1학년/9-그림일기를 써요4.html">[7~8차시] 겪은 일을 그림일기로 쓰기</a></li>
                     <li class="class-order2_list"><a href="국어/1학년/9-그림일기를 써요5.html">[9~10차시] 그림일기에 대해 잘된 점 말하기</a></li>
+                    <li class="class-order2_list">&nbsp;</li>
                 </ul>
             </div>
         </div>
