--- a/6-menu.html
+++ b/6-menu.html
@@ -12,7 +12,11 @@
         <a href="index.html"><i class="fas fa-home fa-2x"></i></a>
     </div>
 
-    <h1 class="menu-year">6학년</h1>
+    <div class="menu-year">
+        <a href="5-menu.html"><i class="fas fa-angle-left fa-2x"></i></a>
+        <h1>6학년</h1>
+        <a href="1-menu.html"><i class="fas fa-angle-right fa-2x"></i></a>
+    </div>
 
     <div class="subject">
         <a href="6-menu.html"><div class="subject-select subject-select_국어 subject-select_국어6">국어</div></a>
