--- a/6-menu_과학.html
+++ b/6-menu_과학.html
@@ -12,7 +12,12 @@
         <a href="index.html"><i class="fas fa-home fa-2x"></i></a>
     </div>
 
-    <h1 class="menu-year">6학년</h1>
+    <div class="menu-year">
+        <a href="5-menu.html"><i class="fas fa-angle-left fa-2x"></i></a>
+        <h1>6학년</h1>
+        <a href="1-menu.html"><i class="fas fa-angle-right fa-2x"></i></a>
+    </div>
+
 
     <div class="subject">
         <a href="6-menu.html"><div class="subject-select subject-select_국어">국어</div></a>
@@ -25,6 +30,138 @@
         <a href="6-menu_음악.html"><div class="subject-select subject-select_음악">음악</div></a>
         <a href="6-menu_미술.html"><div class="subject-select subject-select_미술">미술</div></a>
         <a href="6-menu_실과.html"><div class="subject-select subject-select_실과">실과</div></a>
+    </div>
+
+    <div class="class-order">
+        <div class="class-order1">
+            <h3 class="class-order1_title">1학기</h3>
+            <div class="class-order1_lists">
+                <h3>1. 과학자처럼 탐구해 볼까요?</h3>
+                <ul class="class-order1_lists">
+                    <li class="class-order1_list"><a href="과학/6학년/1-과학자처럼 탐구해 볼까요1.html">[1차시] 탐구 문제를 정하고 가설을 세워 볼까요?</a></li>
+                    <li class="class-order1_list"><a href="과학/6학년/1-과학자처럼 탐구해 볼까요2.html">[2차시] 실험을 계획해 볼까요? </a></li>
+                    <li class="class-order1_list"><a href="과학/6학년/1-과학자처럼 탐구해 볼까요3.html">[3~4차시] 실험을 해 볼까요?</a></li>
+                    <li class="class-order1_list"><a href="과학/6학년/1-과학자처럼 탐구해 볼까요4.html">[5차시] 실험 결과를 변환하고 해석해 볼까요? </a></li>
+                    <li class="class-order1_list"><a href="과학/6학년/1-과학자처럼 탐구해 볼까요5.html">[6차시] 결론을 내려 볼까요?</a></li>
+                </ul>
+                <h3>2. 지구와 달의 운동</h3>
+                <ul class="class-order1_lists">
+                    <li class="class-order1_list"><a href="과학/6학년/2-지구와 달의 운동1.html">[1차시] 움직이는 지구와 달</a></li>
+                    <li class="class-order1_list"><a href="과학/6학년/2-지구와 달의 운동2.html">[2차시] 지구의 자전은 무엇일까요?</a></li>
+                    <li class="class-order1_list"><a href="과학/6학년/2-지구와 달의 운동3.html">[3차시] 하루 동안 태양과 달의 위치는 어떻게 달라질까요?</a></li>
+                    <li class="class-order1_list"><a href="과학/6학년/2-지구와 달의 운동4.html">[4차시] 낮과 밤이 생기는 까닭은 무엇일까요?</a></li>
+                    <li class="class-order1_list"><a href="과학/6학년/2-지구와 달의 운동5.html">[5차시] 지구의 공전은 무엇일까요?</a></li>
+                    <li class="class-order1_list"><a href="과학/6학년/2-지구와 달의 운동6.html">[6차시] 계절에 따라 보이는 별자리가 달라지는 까닭은 무엇일까요?</a></li>
+                    <li class="class-order1_list"><a href="과학/6학년/2-지구와 달의 운동7.html">[7차시] 여러 날 동안 달의 모양은 어떻게 달라질까요?</a></li>
+                    <li class="class-order1_list"><a href="과학/6학년/2-지구와 달의 운동8.html">[8차시] 여러 날 동안 달의 위치는 어떻게 달라질까요?</a></li>
+                    <li class="class-order1_list"><a href="과학/6학년/2-지구와 달의 운동9.html">[9~10차시] 지구와 달의 운동 모형 만들기</a></li>
+                    <li class="class-order1_list"><a href="과학/6학년/2-지구와 달의 운동10.html">[11차시] 지구와 달의 운동을 정리해 볼까요?</a></li>
+                </ul>
+                <h3>3. 여러 가지 기체</h3>
+                <ul class="class-order1_lists">
+                    <li class="class-order1_list"><a href="과학/6학년/3-여러 가지 기체1.html">[1차시] 부글부글 거품 만들기</a></li>
+                    <li class="class-order1_list"><a href="과학/6학년/3-여러 가지 기체2.html">[2~3차시] 산소에는 어떤 성질이 있을까요?</a></li>
+                    <li class="class-order1_list"><a href="과학/6학년/3-여러 가지 기체3.html">[4~5차시] 이산화 탄소에는 어떤 성질이 있을까요?</a></li>
+                    <li class="class-order1_list"><a href="과학/6학년/3-여러 가지 기체4.html">[6차시] 압력이 변하면 기체의 부피는 어떻게 달라질까요?</a></li>
+                    <li class="class-order1_list"><a href="과학/6학년/3-여러 가지 기체5.html">[7~8차시] 온도가 변하면 기체의 부피는 어떻게 달라질까요?</a></li>
+                    <li class="class-order1_list"><a href="과학/6학년/3-여러 가지 기체6.html">[9차시] 공기를 이루는 여러 가지 기체에는 무엇이 있을까요?</a></li>
+                    <li class="class-order1_list"><a href="과학/6학년/3-여러 가지 기체7.html">[10~11차시] 거품이 오래가는 목욕제 만들기</a></li>
+                    <li class="class-order1_list"><a href="과학/6학년/3-여러 가지 기체8.html">[12차시] 여러 가지 기체를 정리해 볼까요?</a></li>
+                </ul>
+                <h3>4. 식물의 구조와 기능</h3>
+                <ul class="class-order1_lists">
+                    <li class="class-order1_list"><a href="과학/6학년/4-식물의 구조와 기능1.html">[1차시] 식물의 생김새를 몸으로 표현하기</a></li>
+                    <li class="class-order1_list"><a href="과학/6학년/4-식물의 구조와 기능2.html">[2차시] 식물을 이루는 세포는 어떻게 생겼을까요?</a></li>
+                    <li class="class-order1_list"><a href="과학/6학년/4-식물의 구조와 기능3.html">[3차시] 뿌리의 생김새와 하는 일을 알아볼까요?</a></li>
+                    <li class="class-order1_list"><a href="과학/6학년/4-식물의 구조와 기능4.html">[4차시] 줄기의 생김새와 하는 일을 알아볼까요?</a></li>
+                    <li class="class-order1_list"><a href="과학/6학년/4-식물의 구조와 기능5.html">[5차시] 잎이 하는 일을 알아볼까요?</a></li>
+                    <li class="class-order1_list"><a href="과학/6학년/4-식물의 구조와 기능6.html">[6차시] 잎에 도달한 물은 어떻게 될까요?</a></li>
+                    <li class="class-order1_list"><a href="과학/6학년/4-식물의 구조와 기능7.html">[7차시] 꽃의 생김새와 하는 일을 알아볼까요?</a></li>
+                    <li class="class-order1_list"><a href="과학/6학년/4-식물의 구조와 기능8.html">[8차시] 열매의 생김새와 하는 일을 알아볼까요?</a></li>
+                    <li class="class-order1_list"><a href="과학/6학년/4-식물의 구조와 기능9.html">[9~10차시] 식물 연극 공연하기</a></li>
+                    <li class="class-order1_list"><a href="과학/6학년/4-식물의 구조와 기능10.html">[11차시] 식물의 구조와 기능을 정리해 볼까요?</a></li>
+                </ul>
+                <h3>5. 빛과 렌즈</h3>
+                <ul class="class-order1_lists">
+                    <li class="class-order1_list"><a href="과학/6학년/5-빛과 렌즈1.html">[1차시] 빛과 렌즈로 놀이하기</a></li>
+                    <li class="class-order1_list"><a href="과학/6학년/5-빛과 렌즈2.html">[2차시] 햇빛이 프리즘을 통과하면 어떻게 될까요?</a></li>
+                    <li class="class-order1_list"><a href="과학/6학년/5-빛과 렌즈3.html">[3차시] 빛은 공기와 물의 경계에서 어떻게 나아갈까요?</a></li>
+                    <li class="class-order1_list"><a href="과학/6학년/5-빛과 렌즈4.html">[4차시] 물속에 있는 물체는 어떻게 보일까요?</a></li>
+                    <li class="class-order1_list"><a href="과학/6학년/5-빛과 렌즈5.html">[5차시] 볼록 렌즈에는 어떤 특징이 있을까요?</a></li>
+                    <li class="class-order1_list"><a href="과학/6학년/5-빛과 렌즈6.html">[6차시] 볼록 렌즈를 통과한 햇빛은 어떻게 될까요?</a></li>
+                    <li class="class-order1_list"><a href="과학/6학년/5-빛과 렌즈7.html">[7차시] 간이 사진기로 물체를 보면 어떻게 보일까요?</a></li>
+                    <li class="class-order1_list"><a href="과학/6학년/5-빛과 렌즈8.html">[8차시] 우리 생활에서 볼록 렌즈는 어디에 이용될까요?</a></li>
+                    <li class="class-order1_list"><a href="과학/6학년/5-빛과 렌즈9.html">[9~10차시] 우리가 찾은 볼록 렌즈로 세상 보기</a></li>
+                    <li class="class-order1_list"><a href="과학/6학년/5-빛과 렌즈10.html">[11차시] 빛과 렌즈를 정리해 볼까요?</a></li>
+                </ul>
+                
+            </div>
+        </div>
+        <div class="class-order2">
+            <h3 class="class-order2_title">2학기</h3>
+            <div class="class-order2_lists">
+                <h3>1. 전기의 이용</h3>
+                <ul class="class-order2_lists">
+                    <li class="class-order2_list"><a href="과학/6학년/6-전기의 이용1.html">[1차시] 전기를 이용한 재미있는 점토 놀이</a></li>
+                    <li class="class-order2_list"><a href="과학/6학년/6-전기의 이용2.html">[2차시] 전구에 불이 켜지게 하려면 어떻게 해야 할까요?</a></li>
+                    <li class="class-order2_list"><a href="과학/6학년/6-전기의 이용3.html">[3차시] 전지의 연결 방법에 따라 전구의 밝기는 어떻게 달라질까요?</a></li>
+                    <li class="class-order2_list"><a href="과학/6학년/6-전기의 이용4.html">[4차시] 전구의 연결 방법에 따라 전구의 밝기는 어떻게 달라질까요?</a></li>
+                    <li class="class-order2_list"><a href="과학/6학년/6-전기의 이용5.html">[5차시] 전류가 흐르는 전선 주위에서 나침반 바늘은 어떻게 될까요?</a></li>
+                    <li class="class-order2_list"><a href="과학/6학년/6-전기의 이용6.html">[6~7차시] 전자석은 어떤 성질이 있을까요?</a></li>
+                    <li class="class-order2_list"><a href="과학/6학년/6-전기의 이용7.html">[8차시] 전기를 안전하게 사용하고 절약하는 방법은 무엇일까요?</a></li>
+                    <li class="class-order2_list"><a href="과학/6학년/6-전기의 이용8.html">[9~10차시] 전기 회로를 이용한 작품 만들기</a></li>
+                    <li class="class-order2_list"><a href="과학/6학년/6-전기의 이용9.html">[11차시] 전기의 이용을 정리해볼까요?</a></li>
+                    <li class="class-order2_list">&nbsp;</li>
+                </ul>
+                <h3>2. 계절의 변화</h3>
+                <ul class="class-order2_lists">
+                    <li class="class-order2_list"><a href="과학/6학년/7-계절의 변화1.html">[1차시] 계절에 따라 달라지는 자연의 모습 알아보기</a></li>
+                    <li class="class-order2_list"><a href="과학/6학년/7-계절의 변화2.html">[2~3차시] 하루 동안 태양 고도, 그림자 길이, 기온은 서로 어떤 관계가 있을까요?</a></li>
+                    <li class="class-order2_list"><a href="과학/6학년/7-계절의 변화3.html">[4차시] 계절에 따라 태양의 남중 고도와 낮의 길이는 어떻게 달라질까요?</a></li>
+                    <li class="class-order2_list"><a href="과학/6학년/7-계절의 변화4.html">[5차시] 계절에 따라 기온이 달라지는 까닭은 무엇일까요?</a></li>
+                    <li class="class-order2_list"><a href="과학/6학년/7-계절의 변화5.html">[6~7차시] 계절의 변화가 생기는 까닭은 무엇일까요?</a></li>
+                    <li class="class-order2_list"><a href="과학/6학년/7-계절의 변화6.html">[8~9차시] 나만의 태양 고도 측정기 만들기</a></li>
+                    <li class="class-order2_list"><a href="과학/6학년/7-계절의 변화7.html">[10차시] 계절의 변화를 정리해 볼까요?</a></li>
+                </ul>
+                <h3>3. 연소와 소화</h3>
+                <ul class="class-order2_lists">
+                    <li class="class-order2_list"><a href="과학/6학년/8-연소와 소화1.html">[1차시] 공기 대포로 촛불 끄기</a></li>
+                    <li class="class-order2_list"><a href="과학/6학년/8-연소와 소화2.html">[2차시] 물질이 탈 때 어떤 현상이 나타날까요?</a></li>
+                    <li class="class-order2_list"><a href="과학/6학년/8-연소와 소화3.html">[3~4차시] 물질이 타려면 무엇이 필요할까요?</a></li>
+                    <li class="class-order2_list"><a href="과학/6학년/8-연소와 소화4.html">[5차시] 물질이 연소한 후에는 무엇이 생길까요?</a></li>
+                    <li class="class-order2_list"><a href="과학/6학년/8-연소와 소화5.html">[6차시] 불을 끄려면 어떻게 해야 할까요?</a></li>
+                    <li class="class-order2_list"><a href="과학/6학년/8-연소와 소화6.html">[7차시] 화재가 발생하면 어떻게 해야 할까요?</a></li>
+                    <li class="class-order2_list"><a href="과학/6학년/8-연소와 소화7.html">[8~9차시] 화재 대피도 그리기</a></li>
+                    <li class="class-order2_list"><a href="과학/6학년/8-연소와 소화8.html">[10차시] 연소와 소화를 정리해 볼까요?</a></li>
+                </ul>
+                <h3>4. 우리 몸의 구조와 기능</h3>
+                <ul class="class-order2_lists">
+                    <li class="class-order2_list"><a href="과학/6학년/9-우리 몸의 구조와 기능1.html">[1차시] 인체 모형 만들고 몸으로 표현하기</a></li>
+                    <li class="class-order2_list"><a href="과학/6학년/9-우리 몸의 구조와 기능2.html">[2차시] 우리 몸은 어떻게 움직일까요?</a></li>
+                    <li class="class-order2_list"><a href="과학/6학년/9-우리 몸의 구조와 기능3.html">[3차시] 우리가 먹은 음식물은 어떻게 될까요?</a></li>
+                    <li class="class-order2_list"><a href="과학/6학년/9-우리 몸의 구조와 기능4.html">[4차시] 숨을 쉴 때 우리 몸에서는 어떤 일이 일어날까요?</a></li>
+                    <li class="class-order2_list"><a href="과학/6학년/9-우리 몸의 구조와 기능5.html">[5차시] 혈액은 우리 몸에서 어떻게 이동할까요?</a></li>
+                    <li class="class-order2_list"><a href="과학/6학년/9-우리 몸의 구조와 기능6.html">[6차시] 우리 몸은 노폐물을 어떻게 내보낼까요?</a></li>
+                    <li class="class-order2_list"><a href="과학/6학년/9-우리 몸의 구조와 기능7.html">[7차시] 우리 몸은 자극에 어떻게 반응할까요?</a></li>
+                    <li class="class-order2_list"><a href="과학/6학년/9-우리 몸의 구조와 기능8.html">[8차시] 운동할 때 우리 몸에는 어떤 변화가 나타날까요?</a></li>
+                    <li class="class-order2_list"><a href="과학/6학년/9-우리 몸의 구조와 기능9.html">[9~10차시] 건강 박람회 열기</a></li>
+                    <li class="class-order2_list"><a href="과학/6학년/9-우리 몸의 구조와 기능10.html">[11차시] 우리 몸의 구조와 기능을 정리해 볼까요?</a></li>
+                    <li class="class-order2_list">&nbsp;</li>
+                </ul>
+                <h3>5. 에너지와 생활</h3>
+                <ul class="class-order2_lists">
+                    <li class="class-order2_list"><a href="과학/6학년/10-에너지와 생활1.html">[1차시] 과일로 전지 만들기</a></li>
+                    <li class="class-order2_list"><a href="과학/6학년/10-에너지와 생활2.html">[2차시] 에너지는 어떻게 얻을까요?</a></li>
+                    <li class="class-order2_list"><a href="과학/6학년/10-에너지와 생활3.html">[3차시] 에너지에는 어떤 것이 있을까요?</a></li>
+                    <li class="class-order2_list"><a href="과학/6학년/10-에너지와 생활4.html">[4차시] 에너지의 형태가 바뀌는 예를 찾아볼까요?</a></li>
+                    <li class="class-order2_list"><a href="과학/6학년/10-에너지와 생활5.html">[5차시] 우리가 이용하는 에너지는 무엇으로부터 전환되었을까요?</a></li>
+                    <li class="class-order2_list"><a href="과학/6학년/10-에너지와 생활6.html">[6차시] 에너지를 효율적으로 이용하려면 어떻게 해야 할까요?</a></li>
+                    <li class="class-order2_list"><a href="과학/6학년/10-에너지와 생활7.html">[7~8차시] 우리 학교의 에너지 이용 실태 취재하기</a></li>
+                    <li class="class-order2_list"><a href="과학/6학년/10-에너지와 생활8.html">[9차시] 에너지와 생활을 정리해 볼까요?</a></li>
+                    <li class="class-order2_list">&nbsp;</li>
+                </ul>
+            </div>
+        </div>
     </div>
 
 
