--- a/1-menu_수학.html
+++ b/1-menu_수학.html
@@ -12,7 +12,12 @@
         <a href="index.html"><i class="fas fa-home fa-2x"></i></a>
     </div>
 
-    <h1 class="menu-year">1학년</h1>
+    <div class="menu-year">
+        <a href="6-menu.html"><i class="fas fa-angle-left fa-2x"></i></a>
+        <h1>1학년</h1>
+        <a href="2-menu.html"><i class="fas fa-angle-right fa-2x"></i></a>
+    </div>
+    
 
     <div class="subject">
         <a href="1-menu.html"><div class="subject-select subject-select_국어">국어</div></a>
