--- a/2-menu_여름.html
+++ b/2-menu_여름.html
@@ -12,7 +12,11 @@
         <a href="index.html"><i class="fas fa-home fa-2x"></i></a>
     </div>
 
-    <h1 class="menu-year">2학년</h1>
+    <div class="menu-year">
+        <a href="1-menu.html"><i class="fas fa-angle-left fa-2x"></i></a>
+        <h1>2학년</h1>
+        <a href="3-menu.html"><i class="fas fa-angle-right fa-2x"></i></a>
+    </div>
 
     <div class="subject">
         <a href="2-menu.html"><div class="subject-select subject-select_국어">국어</div></a>
