--- a/4-menu_사회.html
+++ b/4-menu_사회.html
@@ -12,7 +12,11 @@
         <a href="index.html"><i class="fas fa-home fa-2x"></i></a>
     </div>
 
-    <h1 class="menu-year">4학년</h1>
+    <div class="menu-year">
+        <a href="3-menu.html"><i class="fas fa-angle-left fa-2x"></i></a>
+        <h1>4학년</h1>
+        <a href="5-menu.html"><i class="fas fa-angle-right fa-2x"></i></a>
+    </div>
 
     <div class="subject">
         <a href="4-menu.html"><div class="subject-select subject-select_국어">국어</div></a>
