--- a/과학/6학년/1-과학자처럼 탐구해 볼까요1.html
+++ b/과학/6학년/1-과학자처럼 탐구해 볼까요1.html
@@ -4,38 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
-    <title>5학년</title>
+    <link rel="stylesheet" href="C:\Users\user1\Desktop\Code\2-java\Educational-site\css\styles.css">
+    <title>6학년</title>
 </head>
 <body>
     <div>
-        <a href="index.html"><i class="fas fa-home fa-2x"></i></a>
+        <a href="C:\Users\user1\Desktop\Code\2-java\Educational-site\index.html"><i class="fas fa-home fa-2x"></i></a>
     </div>
 
-    <div class="menu-year">
-        <a href="4-menu.html"><i class="fas fa-angle-left fa-2x"></i></a>
-        <h1>5학년</h1>
-        <a href="6-menu.html"><i class="fas fa-angle-right fa-2x"></i></a>
-    </div>
-
+    <h1 class="menu-year">6학년</h1>
 
     <div class="subject">
-        <a href="5-menu.html"><div class="subject-select subject-select_국어">국어</div></a>
-        <a href="5-menu_수학.html"><div class="subject-select subject-select_수학">수학</div></a>
-        <a href="5-menu_사회.html"><div class="subject-select subject-select_사회">사회</div></a>
-        <a href="5-menu_과학.html"><div class="subject-select subject-select_과학">과학</div></a>
-        <a href="5-menu_체육.html"><div class="subject-select subject-select_체육">체육</div></a>
-        <a href="5-menu_도덕.html"><div class="subject-select subject-select_도덕">도덕</div></a>
-        <a href="5-menu_영어.html"><div class="subject-select subject-select_영어">영어</div></a>
-        <a href="5-menu_음악.html"><div class="subject-select subject-select_음악 subject-select_음악5">음악</div></a>
-        <a href="5-menu_미술.html"><div class="subject-select subject-select_미술">미술</div></a>
-        <a href="5-menu_실과.html"><div class="subject-select subject-select_실과">실과</div></a>
+        <a href="6-menu.html"><div class="subject-select subject-select_국어">국어</div></a>
+        <a href="6-menu_수학.html"><div class="subject-select subject-select_수학">수학</div></a>
+        <a href="6-menu_사회.html"><div class="subject-select subject-select_사회">사회</div></a>
+        <a href="6-menu_과학.html"><div class="subject-select subject-select_과학 subject-select_과학6">과학</div></a>
+        <a href="6-menu_체육.html"><div class="subject-select subject-select_체육">체육</div></a>
+        <a href="6-menu_도덕.html"><div class="subject-select subject-select_도덕">도덕</div></a>
+        <a href="6-menu_영어.html"><div class="subject-select subject-select_영어">영어</div></a>
+        <a href="6-menu_음악.html"><div class="subject-select subject-select_음악">음악</div></a>
+        <a href="6-menu_미술.html"><div class="subject-select subject-select_미술">미술</div></a>
+        <a href="6-menu_실과.html"><div class="subject-select subject-select_실과">실과</div></a>
     </div>
 
-
-
-
-    
+    <div class="">
+        <div class="">
+            <h3 class="">[1차시] 탐구 문제를 정하고 가설을 세워 볼까요? (교과서 10~11쪽, 실험 관찰 6쪽)</h3>
+        </div>
+    </div>
+        
     <div class="left-side-bar">
         <div class="status-ico">
             <span>▶</span>
